<resources>
    <string name="app_name">MyCarrot</string>
    <string name="title_home">홈</string>
    <string name="title_search">검색</string>
    <string name="title_write">글쓰기</string>
    <string name="title_chat">채팅</string>
    <string name="title_my">나의 당근</string>
    <string name="category_digital">디지털/가전</string>
    <string name="category_furniture">가구/인테리어</string>
    <string name="category_life">생활/가공식품</string>
    <string name="category_woman">여성패션/잡화</string>
    <string name="category_man">남성패션/잡화</string>
    <string name="category_game">게임/취미/스포츠/레저</string>
    <string name="category_beauty">뷰티/미용</string>
    <string name="category_pet">유아/반려동물용품</string>
    <string name="category_book">도서/티켓/음반</string>
    <string name="category_buy">삽니다</string>

    <string name="positive_1">제가 있는 곳까지 와서 거래했어요.</string>
    <string name="positive_2">친절하고 매너가 좋아요.</string>
    <string name="positive_3">시간 약속을 잘 지켜요.</string>
    <string name="positive_4">응답이 빨라요.</string>

    <string name="negative_1">무리하게 가격을 깎아요.</string>
    <string name="negative_2">시간약속을 안 지켜요.</string>
    <string name="negative_3">무조건 택배거래만 하려고 해요.</string>
    <string name="negative_4">채팅 메시지를 보내도 답이 없어요.</string>

    <string name="manner_note">- 받은 비매너 내역은 나에게만 보입니다.\n
    - 매너 온도가 올라가는 경우 (가산점 높은 순)\n
    1. 거래 상대에게 받은 긍정 거래 후기\n
    2. 거래 상대에게 받은 매너 칭찬\n
    3. 대화 상대에게 받은 매너 칭찬\n
    - 매너 온도가 내려가는 경우 (감산점 높은 순)\n
    1. 이용정지 징계\n
    2. 거래 상대의 비매너 평가\n
    3. 대화 상대의 비매너 평가</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
