<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/selector_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/selector_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_write"
        android:icon="@drawable/selector_pencil"
        android:title="@string/title_write" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/selector_chat"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/selector_nav_user"
        android:title="@string/title_my" />

</menu>
