<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fm"
            type="com.mvvm.mycarrot.presentation.buyComplete.SendReviewFragment" />

        <variable
            name="vm"
            type="com.mvvm.mycarrot.presentation.buyComplete.BuyCompleteViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sendReview_cl1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/sendReview_tv_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="거래 후기 보내기"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7" />

            <ImageView
                android:id="@+id/sendReview_iv_backpress"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:onClick="@{() -> fm.onBackPress()}"
                android:src="@drawable/ic_arrow_back_black_14dp"
                app:layout_constraintBottom_toBottomOf="@id/sendReview_tv_profile"
                app:layout_constraintStart_toStartOf="@id/sendReview_tv_profile"
                app:layout_constraintTop_toTopOf="@id/sendReview_tv_profile" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sendReview_cl2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorLittleGray"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/sendReview_cl1">

            <ImageView
                android:id="@+id/sendReview_iv_item"
                FirstImage="@{vm.getbuyCompleteItem.imageList[0]}"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sendReview_tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="거래한 물건"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/sendReview_iv_item"
                app:layout_constraintTop_toTopOf="@id/sendReview_iv_item" />

            <TextView
                Title="@{vm.getbuyCompleteItem.title}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="left"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="@id/sendReview_iv_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/sendReview_tv3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/sendReview_tv1"
            ReviewText="@{vm.getselectedBuyer().nickname}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/sendReview_cl2" />

        <TextView
            android:id="@+id/sendReview_tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="24dp"
            android:text="선택항목은 상대방이 알 수 없어요."
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@id/sendReview_tv1" />

        <RadioGroup
            android:id="@+id/sendReview_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="42dp"
            android:paddingBottom="24dp"
            app:layout_constraintTop_toBottomOf="@id/sendReview_tv2">


            <RadioButton
                android:id="@+id/sendReview_rb_negative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/radio_button_bad"
                android:gravity="center"
                android:onClick="@{() -> fm.visibleNegativeLayout()}" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/radio_button_like"
                android:gravity="center"
                android:onClick="@{() -> fm.visiblePositiveLayout()}" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:button="@drawable/radio_button_best"
                android:gravity="center"
                android:onClick="@{() -> fm.visiblePositiveLayout()}" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/sendReview_ll1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorDivision"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/sendReview_rg" />


        <TextView
            android:id="@+id/sendReview_tv_next"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#AEB5BC"
            android:gravity="center"
            android:onClick="@{() -> fm.startSendReviewSecondFragment()}"
            android:text="다음"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sendReview_cl_bad"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="16dp"
            android:paddingTop="28dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/sendReview_tv_next"
            app:layout_constraintTop_toBottomOf="@id/sendReview_ll1">

            <CheckBox
                android:id="@+id/sendReview_cb_negative1"
                style="@style/CustomCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> fm.checkNegativeReview(@string/negative_1)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/sendReview_cb_negative2"
                style="@style/CustomCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> fm.checkNegativeReview(@string/negative_2)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sendReview_cb_negative1" />

            <CheckBox
                android:id="@+id/sendReview_cb_negative3"
                style="@style/CustomCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> fm.checkNegativeReview(@string/negative_3)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sendReview_cb_negative2" />

            <CheckBox
                android:id="@+id/sendReview_cb_negative4"
                style="@style/CustomCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> fm.checkNegativeReview(@string/negative_4)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sendReview_cb_negative3" />

            <TextView
                android:id="@+id/sendReview_tv_negative1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/negative_1"
                android:textColor="#000"
                app:layout_constraintBottom_toBottomOf="@id/sendReview_cb_negative1"
                app:layout_constraintStart_toEndOf="@id/sendReview_cb_negative1"
                app:layout_constraintTop_toTopOf="@id/sendReview_cb_negative1" />

            <TextView
                android:id="@+id/sendReview_tv_negative2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/negative_2"
                android:textColor="#000"
                app:layout_constraintBottom_toBottomOf="@id/sendReview_cb_negative2"
                app:layout_constraintStart_toEndOf="@id/sendReview_cb_negative2"
                app:layout_constraintTop_toTopOf="@id/sendReview_cb_negative2" />

            <TextView
                android:id="@+id/sendReview_tv_negative3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/negative_3"
                android:textColor="#000"
                app:layout_constraintBottom_toBottomOf="@id/sendReview_cb_negative3"
                app:layout_constraintStart_toEndOf="@id/sendReview_cb_negative3"
                app:layout_constraintTop_toTopOf="@id/sendReview_cb_negative3" />

            <TextView
                android:id="@+id/sendReview_tv_negative4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/negative_4"
                android:textColor="#000"
                app:layout_constraintBottom_toBottomOf="@id/sendReview_cb_negative4"
                app:layout_constraintStart_toEndOf="@id/sendReview_cb_negative4"
                app:layout_constraintTop_toTopOf="@id/sendReview_cb_negative4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sendReview_cl_best_like"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingStart="16dp"
            android:paddingTop="28dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/sendReview_tv_next"
            app:layout_constraintTop_toBottomOf="@id/sendReview_ll1">

            <CheckBox
                android:id="@+id/sendReview_cb_positive1"
                style="@style/CustomCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> fm.checkPositiveReview(@string/positive_1)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/sendReview_cb_positive2"
                style="@style/CustomCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> fm.checkPositiveReview(@string/positive_2)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sendReview_cb_positive1" />

            <CheckBox
                android:id="@+id/sendReview_cb_positive3"
                style="@style/CustomCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> fm.checkPositiveReview(@string/positive_3)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sendReview_cb_positive2" />

            <CheckBox
                android:id="@+id/sendReview_cb_positive4"
                style="@style/CustomCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="@{() -> fm.checkPositiveReview(@string/positive_4)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sendReview_cb_positive3" />

            <TextView
                android:id="@+id/sendReview_tv_positive1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/positive_1"
                android:textColor="#000"
                app:layout_constraintBottom_toBottomOf="@id/sendReview_cb_positive1"
                app:layout_constraintStart_toEndOf="@id/sendReview_cb_positive1"
                app:layout_constraintTop_toTopOf="@id/sendReview_cb_positive1" />

            <TextView
                android:id="@+id/sendReview_tv_positive2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/positive_2"
                android:textColor="#000"
                app:layout_constraintBottom_toBottomOf="@id/sendReview_cb_positive2"
                app:layout_constraintStart_toEndOf="@id/sendReview_cb_positive2"
                app:layout_constraintTop_toTopOf="@id/sendReview_cb_positive2" />

            <TextView
                android:id="@+id/sendReview_tv_positive3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/positive_3"
                android:textColor="#000"
                app:layout_constraintBottom_toBottomOf="@id/sendReview_cb_positive3"
                app:layout_constraintStart_toEndOf="@id/sendReview_cb_positive3"
                app:layout_constraintTop_toTopOf="@id/sendReview_cb_positive3" />

            <TextView
                android:id="@+id/sendReview_tv_positive4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:text="@string/positive_4"
                android:textColor="#000"
                app:layout_constraintBottom_toBottomOf="@id/sendReview_cb_positive4"
                app:layout_constraintStart_toEndOf="@id/sendReview_cb_positive4"
                app:layout_constraintTop_toTopOf="@id/sendReview_cb_positive4" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>